--- a/index.html
+++ b/index.html
@@ -196,28 +196,28 @@ Kintla Lodge offers 1-, 2- and 3-bedroom condos and hotel-style rooms with a que
 
 <div class="col-sm-4">
 <h3>Other Lodging Options</h3>
-<p-small><h5>Best Western Rocky Mountain Lodge</h5>
+<p-small><font face="Raleway">BEST WESTERN ROCKY MOUNTAIN LODGE</font>
 Address: 6510 Highway 93 S, Whitefish, MT 59937
 Phone: (406) 862-2569
 Straightforward property with free WiFi, breakfast & an area shuttle, plus an outdoor pool.</p-small>
-<br><br>
+<br><br><br>
 <h5>Hampton Inn & Suites Whitefish</h5>
 <p-small>
 Address: 6340 US-93, Whitefish, MT 59937
 Phone: (406) 730-8901
 Relaxed hotel featuring complimentary breakfast, plus a fitness room & indoor pool.</p-small>
-<br><br>
+<br><br><br>
 <h5>Pine Lodge</h5>
 <p-small>
 Address: 920 Spokane Ave, Whitefish, MT 59937
 Phone: (406) 862-760
 Rustic-accented rooms & suites, plus indoor & outdoor pools, free breakfast & shuttle service</p-small>
-<br><br>
+<br><br><br>
 <h5>AirBnB</h5>
 <p-small>
 https://www.airbnb.com/</p-small>
 <br><br>
-*Please note, you may need a rental car for ceremony and reception by choosing other accommodations.
+<i>*Please note, you may need a rental car for ceremony and reception by choosing other accommodations.</i>
 </div>  
 
 <div class="col-sm-4">
