--- a/index.html
+++ b/index.html
@@ -196,24 +196,24 @@ Kintla Lodge offers 1-, 2- and 3-bedroom condos and hotel-style rooms with a que
 
 <div class="col-sm-4">
 <h3>Other Lodging Options</h3>
-<p-small><font face="Raleway">BEST WESTERN ROCKY MOUNTAIN LODGE</font>
+<p-small><font face="Raleway"><b>BEST WESTERN ROCKY MOUNTAIN LODGE</b></font>
 Address: 6510 Highway 93 S, Whitefish, MT 59937
 Phone: (406) 862-2569
 Straightforward property with free WiFi, breakfast & an area shuttle, plus an outdoor pool.</p-small>
 <br><br><br>
-<h5>Hampton Inn & Suites Whitefish</h5>
+<font face="Raleway"><b>HAMPTON INN & SUITES WHITEFISH</b></font>
 <p-small>
 Address: 6340 US-93, Whitefish, MT 59937
 Phone: (406) 730-8901
 Relaxed hotel featuring complimentary breakfast, plus a fitness room & indoor pool.</p-small>
 <br><br><br>
-<h5>Pine Lodge</h5>
+<font face="Raleway"><b>PINE LODGE</b></font>
 <p-small>
 Address: 920 Spokane Ave, Whitefish, MT 59937
 Phone: (406) 862-760
 Rustic-accented rooms & suites, plus indoor & outdoor pools, free breakfast & shuttle service</p-small>
 <br><br><br>
-<h5>AirBnB</h5>
+<font face="Raleway"><b>AIRBNB</b></font>
 <p-small>
 https://www.airbnb.com/</p-small>
 <br><br>
@@ -222,7 +222,7 @@ https://www.airbnb.com/</p-small>
 
 <div class="col-sm-4">
 <h3>Travel and Transportation</h3>
-<h5>Area Shuttle Service</h5>
+<font face="Raleway"><b>AREA SHUTTLE SERVICE</b></font>
 <p-small>
 Glacier Park Express– Service between Whitefish Mountain Resort, town of Whitefish, and Glacier Park
 Trips between Whitefish and Whitefish Mountain Resort are FREE.
@@ -230,17 +230,17 @@ Trips to Glacier Park are $10 per person, $5 for kids
 Whitefish Mountain Resort Village Shuttle: Complimentary to Whitefish Mountain Resort Lodging guests, to various
 locations around the resort. This shuttle does not go down to Whitefish.
 </p-small><br><br>
-<h5>Rental Car Companies</h5>
+<font face="Raleway"><b>RENTAL CAR COMPANIES</b></font>
 <p-small>
 Dollar (406) 892-0009 Avis (406) 257-2727 Enterprise (406) 755-4848
 Hertz (406) 863-1210 Budget (406) 755-7500 Thrifty (406) 257-7333
 </p-small><br><br>   
-<h5>Taxi Service</h5>
+<font face="Raleway"><b>TAXI SERVICE</b></font>
 <p-small>
 Glacier Taxi – serving the Whitefish area: (406) 250-3603
 Arrow Shuttle - Offering Resort, Airport Shuttle, and Taxi Service. (406) 300-2301
 </p-small><br><br>   
-<h5>Road Conditions</h5>
+<font face="Raleway"><b>ROAD CONDITIONS</b></font>
 <p-small>
 State of Montana 1-800-226-7623 or Dial 511
 </p-small>    
