--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ https://www.airbnb.com/</p-small>
 
 <div class="col-sm-4">
 <h3>Travel and Transportation</h3>
-<font face="Raleway"><b>AREA SHUTTLE SERVICE</b></font>
+<font face="Raleway"><b>AREA SHUTTLE SERVICE</b></font><br>
 <p-small>
 Glacier Park Express– Service between Whitefish Mountain Resort, town of Whitefish, and Glacier Park
 Trips between Whitefish and Whitefish Mountain Resort are FREE.
@@ -230,17 +230,17 @@ Trips to Glacier Park are $10 per person, $5 for kids
 Whitefish Mountain Resort Village Shuttle: Complimentary to Whitefish Mountain Resort Lodging guests, to various
 locations around the resort. This shuttle does not go down to Whitefish.
 </p-small><br><br>
-<font face="Raleway"><b>RENTAL CAR COMPANIES</b></font>
+<font face="Raleway"><b>RENTAL CAR COMPANIES</b></font><br>
 <p-small>
 Dollar (406) 892-0009 Avis (406) 257-2727 Enterprise (406) 755-4848
 Hertz (406) 863-1210 Budget (406) 755-7500 Thrifty (406) 257-7333
 </p-small><br><br>   
-<font face="Raleway"><b>TAXI SERVICE</b></font>
+<font face="Raleway"><b>TAXI SERVICE</b></font><br>
 <p-small>
 Glacier Taxi – serving the Whitefish area: (406) 250-3603
 Arrow Shuttle - Offering Resort, Airport Shuttle, and Taxi Service. (406) 300-2301
 </p-small><br><br>   
-<font face="Raleway"><b>ROAD CONDITIONS</b></font>
+<font face="Raleway"><b>ROAD CONDITIONS</b></font><br>
 <p-small>
 State of Montana 1-800-226-7623 or Dial 511
 </p-small>    
