Added text test to the index.html file for testing.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+TEST
 <!DOCTYPE html>
 <html lang="en">
 
@@ -181,18 +182,18 @@
 <h3>Whitefish Mountain Resort</h3>
 <p-small><b>Address:</b> 1015 Glades Dr, Whitefish, MT 59937, USA
 <br><b>Phone:</b> 800-858-4152
-<br>Resort accommodations are available in all sizes and types from luxurious townhomes and private residences to cozy cabins and condominiums. 
+<br>Resort accommodations are available in all sizes and types from luxurious townhomes and private residences to cozy cabins and condominiums.
 
 <p-small>Call 1-800-858-4152.  Any of the Vacation Planners can assist you, whether you’ve decided on a specific property or building, or would like for them to discuss some options with you.  Mention your promo code, which is BrandonWexler to receive 15% off OR you may also book on-line by visiting skiwhitefish.com, and entering this same promo code.  The promo code cannot be used online until August 30th, 2018.
 </p-small>
 <p-small>Please book your accommodations in the main village area, which includes the Morning Eagle Lodge and the Kintla Lodge.
 <br><br>
-Morning Eagle Lodge offers studio, 1-, 2- and 3-bedroom condos available. Each condo is equipped with a kitchen, granite countertops, upscale living spaces, one bathroom for every bedroom and private balconies. Amenities include gas fireplaces in 1-, 2- and 3-bedroom units, underground parking, mountain and valley views, an elevator, fitness facility, free WiFi access, rooftop hot tub and a shared gas grill. 
+Morning Eagle Lodge offers studio, 1-, 2- and 3-bedroom condos available. Each condo is equipped with a kitchen, granite countertops, upscale living spaces, one bathroom for every bedroom and private balconies. Amenities include gas fireplaces in 1-, 2- and 3-bedroom units, underground parking, mountain and valley views, an elevator, fitness facility, free WiFi access, rooftop hot tub and a shared gas grill.
 <br><br>
-Kintla Lodge offers 1-, 2- and 3-bedroom condos and hotel-style rooms with a queen bed. Condos feature spacious upscale living rooms, a kitchen, one bathroom for every bedroom and private decks. Amenities include gas fireplaces in 1-, 2- and 3-bedroom condos, underground parking, elevators, free WiFi access, a shared slopeside hot tub and mountain and valley views. 
+Kintla Lodge offers 1-, 2- and 3-bedroom condos and hotel-style rooms with a queen bed. Condos feature spacious upscale living rooms, a kitchen, one bathroom for every bedroom and private decks. Amenities include gas fireplaces in 1-, 2- and 3-bedroom condos, underground parking, elevators, free WiFi access, a shared slopeside hot tub and mountain and valley views.
 </p-small>
-</font>   
-</div>  
+</font>
+</div>
 
 <div class="col-sm-4">
 <h3>Other Lodging Options</h3>
@@ -218,7 +219,7 @@ Rustic-accented rooms & suites, plus indoor & outdoor pools, free breakfast & sh
 https://www.airbnb.com/</p-small>
 <br><br>
 <i>*Please note, you may need a rental car for ceremony and reception by choosing other accommodations.</i>
-</div>  
+</div>
 
 <div class="col-sm-4">
 <h3>Travel and Transportation</h3>
@@ -234,17 +235,17 @@ locations around the resort. This shuttle does not go down to Whitefish.
 <p-small>
 Dollar (406) 892-0009 Avis (406) 257-2727 Enterprise (406) 755-4848
 Hertz (406) 863-1210 Budget (406) 755-7500 Thrifty (406) 257-7333
-</p-small><br><br>   
+</p-small><br><br>
 <font face="Raleway"><b>TAXI SERVICE</b></font><br>
 <p-small>
 Glacier Taxi – serving the Whitefish area: (406) 250-3603
 Arrow Shuttle - Offering Resort, Airport Shuttle, and Taxi Service. (406) 300-2301
-</p-small><br><br>   
+</p-small><br><br>
 <font face="Raleway"><b>ROAD CONDITIONS</b></font><br>
 <p-small>
 State of Montana 1-800-226-7623 or Dial 511
-</p-small>    
-</div>  
+</p-small>
+</div>
 </div>  <!-- end of row -->
 </div>
 </section>
