--- a/accommodations.html
+++ b/accommodations.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Brandon and Allison - Cccommodations</title>
+    <title>Brandon and Allison - August 30th, 2019</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -76,21 +76,16 @@
         <!-- /.container -->
     </nav>
 
+
     <!-- Our Story Section -->
-    <section id="accommodations" class="container content-section text-center">
+    <section id="ourstory" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <img src="img/mountaingoat.png" width="140" height="112">
                 <br>
-                <font color="black"><h2>Accommodations</h2>
-                <h3>WHITEFISH MOUNTAIN RESORT</h3>
-                <p><b>Address:</b> 1015 Glades Dr, Whitefish, MT 59937, USA
-<b>Phone:</b> 800-858-4152
-Resort accommodations are available in all sizes and types from luxurious townhomes and private residences to cozy cabins and condominiums. Call 1-800-858-4152. Any of the Vacation Planners can assist you, whether you’ve decided on a specific property or building, or would like for them to discuss some options with you. Mention your promo code, which is BrandonWexler to receive 15% off OR you may also book on-line by visiting skiwhitefish.com, and entering this same promo code. The promo code cannot be used online until August 30th, 2018. Please book your accommodations in the main village area, which includes the Morning Eagle Lodge and the Kintla Lodge.
-
-Morning Eagle Lodge offers studio, 1-, 2- and 3-bedroom condos available. Each condo is equipped with a kitchen, granite countertops, upscale living spaces, one bathroom for every bedroom and private balconies. Amenities include gas fireplaces in 1-, 2- and 3-bedroom units, underground parking, mountain and valley views, an elevator, fitness facility, free WiFi access, rooftop hot tub and a shared gas grill.
-
-Kintla Lodge offers 1-, 2- and 3-bedroom condos and hotel-style rooms with a queen bed. Condos feature spacious upscale living rooms, a kitchen, one bathroom for every bedroom and private decks. Amenities include gas fireplaces in 1-, 2- and 3-bedroom condos, underground parking, elevators, free WiFi access, a shared slopeside hot tub and mountain and valley views.</p>
+                <font color="black"><h2>Our Story</h2>
+                <h3>Athens Proposal</h3>
+                <p>In September 2017 on a family trip to Greece, Brandon proposed on our rooftop garden overlooking Acropolis in front of family.</p>
                 <h3>How We Met</h3>
                 <p>We met via match.com in October of 2014. On our first date, we realized our paths had crossed before: When we were teenagers, Brandon managed the Quizno's directly across the street from my neighborhood, and I remembered seeing him there on the weekends, reading the newspaper. We grew up very near each other, and, to add to the coincidences, we still did: Brandon lived in a condo just one street over from my apartment.</p>
                 <h3>Travels</h3>
@@ -107,6 +102,159 @@ Kintla Lodge offers 1-, 2- and 3-bedroom condos and hotel-style rooms with a que
             </div>
         </div>
     </section>
+
+    <!-- Wedding Details Section -->
+    <section id="weddingdetails" class="content-section text-center">
+        <div class="download-section">
+            <div class="container">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <h2>Wedding Details</h2>
+                    <h3>Date and Time</h3>
+                    <p>Friday, August 30, 2019.
+                    <br>5:30 PM Mountain Time</p>
+                    <h3>Ceremony and Reception</h3>
+                    <p>Whitefish Mountain Resort
+                    <br>1015 Glades Dr, Whitefish, MT 59937, USA</p>
+                    <p>Ceremony and Reception will both take place at Whitefish Mountain Resort, where a room block and 15% off promo code have been provided under "accommodations" tab.</p>
+                    <p>Guests arrive by chairlift or enclosed gondola to the ceremony at the summit. Reception to follow at Base Lodge.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+<!-- Why a Destination Wedding -->
+    <section id="destination" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <font color="black"><h2>Our Story</h2>
+                <h3>Why We Chose a Destination Wedding</h3>
+                                   <h4>For the Love of Travel</h4>
+<p><i>"Whitefish is a resort town in the Rocky Mountains of northwest Montana. It’s a gateway to the jagged peaks, lakes and glacier-carved valleys of Glacier National Park. Home to bighorn sheep, mountain goats, grizzly bears, golden eagles, Canadian lynx, wolverines, and many other beasts and birds, Glacier National Park is 16,000 square miles of mountains, meadows and lakes on the Continental Divide, a breathtaking landscape so remote it is sometimes lonely even in our crowded age."</i></p>
+
+<p>Ever since Brandon and I traveled to Montana in May 2017, we knew we wanted to see more mountains and wildlife. We visited a lot of different cities in our travels together, but nothing compared to the excitement of experiencing bears, bighorn sheep, coyote, and other wild animals in their natural habitat when visiting Yellowstone National Park. Not to mention the gorgeous backdrop. Glacier National Park was added to our bucket list shortly after that trip.</p>
+
+<p>When planning our wedding, we wanted it to be something that is representative of us and who we are as a couple. We love to travel and experience new places. We couldn't envision getting married in St. Louis when our best times together have been packing up and getting lost in new worlds. We would love to share this intimate experience with our closest family and friends.  We are so very appreciative of anyone who can make the journey to spend our wedding day with us.</p>
+
+<h4>To Have an Intimate Wedding</h4>
+<p>We want to be surrounded by those who truly know us. Having a destination wedding allows us to spend more quality time with each of our guests and have a more intimate experience.</p>
+
+<h4>To Have More Than Just a Wedding</h4>
+<p>We view this as a time for our family and friends to come together and have an unforgettable experience. Not just a wedding, but a chance to get to know each other and have a great time, for more than just one night. With a destination wedding, we have the ability to plan multiple events surrounding the wedding. We look forward to a fun-filled weekend in the mountains with our friends and families.</p>
+
+<h4>To Have a Good Time</h4>
+<p>Photographing multiple weddings together has given us a unique behind-the-scenes perspective of weddings. Between the stress of  coordinating vendors, guests, and bridal parties - it seemed easy to lose sight of the reason for the wedding.</p>
+
+<p>We want our wedding to be enjoyable to our guests and to us. Leaving the planning to the resort allows us to focus on why we're there: to make a lifelong commitment to one another and celebrate this time in our lives.</p>
+                                   </font>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Accomodations Section -->
+<section id="accomodations" class="content-section download-section">
+<div class="container">
+<div class="row">
+<div class="col-md-12 text-center">
+    <h1>Accomodations</h1>
+</div>
+</div>
+<div class="row">
+<div class="col-sm-4">
+<h3>Whitefish Mountain Resort</h3>
+<p-small><b>Address:</b> 1015 Glades Dr, Whitefish, MT 59937, USA
+<br><b>Phone:</b> 800-858-4152
+<br>Resort accommodations are available in all sizes and types from luxurious townhomes and private residences to cozy cabins and condominiums.
+
+<p-small>Call 1-800-858-4152.  Any of the Vacation Planners can assist you, whether you’ve decided on a specific property or building, or would like for them to discuss some options with you.  Mention your promo code, which is BrandonWexler to receive 15% off OR you may also book on-line by visiting skiwhitefish.com, and entering this same promo code.  The promo code cannot be used online until August 30th, 2018.
+</p-small>
+<p-small>Please book your accommodations in the main village area, which includes the Morning Eagle Lodge and the Kintla Lodge.
+<br><br>
+Morning Eagle Lodge offers studio, 1-, 2- and 3-bedroom condos available. Each condo is equipped with a kitchen, granite countertops, upscale living spaces, one bathroom for every bedroom and private balconies. Amenities include gas fireplaces in 1-, 2- and 3-bedroom units, underground parking, mountain and valley views, an elevator, fitness facility, free WiFi access, rooftop hot tub and a shared gas grill.
+<br><br>
+Kintla Lodge offers 1-, 2- and 3-bedroom condos and hotel-style rooms with a queen bed. Condos feature spacious upscale living rooms, a kitchen, one bathroom for every bedroom and private decks. Amenities include gas fireplaces in 1-, 2- and 3-bedroom condos, underground parking, elevators, free WiFi access, a shared slopeside hot tub and mountain and valley views.
+</p-small>
+</font>
+</div>
+
+<div class="col-sm-4">
+<h3>Other Lodging Options</h3>
+<p-small><font face="Raleway"><b>BEST WESTERN ROCKY MOUNTAIN LODGE</b></font>
+Address: 6510 Highway 93 S, Whitefish, MT 59937
+Phone: (406) 862-2569
+Straightforward property with free WiFi, breakfast & an area shuttle, plus an outdoor pool.</p-small>
+<br><br><br>
+<font face="Raleway"><b>HAMPTON INN & SUITES WHITEFISH</b></font>
+<p-small>
+Address: 6340 US-93, Whitefish, MT 59937
+Phone: (406) 730-8901
+Relaxed hotel featuring complimentary breakfast, plus a fitness room & indoor pool.</p-small>
+<br><br><br>
+<font face="Raleway"><b>PINE LODGE</b></font>
+<p-small>
+Address: 920 Spokane Ave, Whitefish, MT 59937
+Phone: (406) 862-760
+Rustic-accented rooms & suites, plus indoor & outdoor pools, free breakfast & shuttle service</p-small>
+<br><br><br>
+<font face="Raleway"><b>AIRBNB</b></font>
+<p-small>
+https://www.airbnb.com/</p-small>
+<br><br>
+<i>*Please note, you may need a rental car for ceremony and reception by choosing other accommodations.</i>
+</div>
+
+<div class="col-sm-4">
+<h3>Travel and Transportation</h3>
+<font face="Raleway"><b>AREA SHUTTLE SERVICE</b></font><br>
+<p-small>
+Glacier Park Express– Service between Whitefish Mountain Resort, town of Whitefish, and Glacier Park
+Trips between Whitefish and Whitefish Mountain Resort are FREE.
+Trips to Glacier Park are $10 per person, $5 for kids
+Whitefish Mountain Resort Village Shuttle: Complimentary to Whitefish Mountain Resort Lodging guests, to various
+locations around the resort. This shuttle does not go down to Whitefish.
+</p-small><br><br>
+<font face="Raleway"><b>RENTAL CAR COMPANIES</b></font><br>
+<p-small>
+Dollar (406) 892-0009 Avis (406) 257-2727 Enterprise (406) 755-4848
+Hertz (406) 863-1210 Budget (406) 755-7500 Thrifty (406) 257-7333
+</p-small><br><br>
+<font face="Raleway"><b>TAXI SERVICE</b></font><br>
+<p-small>
+Glacier Taxi – serving the Whitefish area: (406) 250-3603
+Arrow Shuttle - Offering Resort, Airport Shuttle, and Taxi Service. (406) 300-2301
+</p-small><br><br>
+<font face="Raleway"><b>ROAD CONDITIONS</b></font><br>
+<p-small>
+State of Montana 1-800-226-7623 or Dial 511
+</p-small>
+</div>
+</div>  <!-- end of row -->
+</div>
+</section>
+
+
+    <!-- Map Section -->
+    <div id="map"></div>
+
+    <!-- Footer -->
+    <footer>
+        <div class="container text-center">
+            <p>Copyright &copy; Your Website 2016</p>
+        </div>
+    </footer>
+
+    <!-- jQuery -->
+    <script src="vendor/jquery/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+
+    <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
+
     <!-- Theme JavaScript -->
     <script src="js/grayscale.min.js"></script>
 
