--- a/index.html
+++ b/index.html
@@ -141,24 +141,23 @@
 
 <!-- Why a Destination Wedding -->
     <section id="destination" class="container content-section text-center">
-        <div class="row">
+        <div class="row" style="color: black">
             <div class="col-lg-8 col-lg-offset-2">
-                <font color="black"><h2>Our Story</h2>
-                <h3>Why We Chose a Destination Wedding</h3>
-                                   <h4>For the Love of Travel</h4>
+                <h2>Why We Chose a Destination Wedding</h2>
+                                   <h3>For the Love of Travel</h3>
 <p><i>"Whitefish is a resort town in the Rocky Mountains of northwest Montana. It’s a gateway to the jagged peaks, lakes and glacier-carved valleys of Glacier National Park. Home to bighorn sheep, mountain goats, grizzly bears, golden eagles, Canadian lynx, wolverines, and many other beasts and birds, Glacier National Park is 16,000 square miles of mountains, meadows and lakes on the Continental Divide, a breathtaking landscape so remote it is sometimes lonely even in our crowded age."</i></p>
 
 <p>Ever since Brandon and I traveled to Montana in May 2017, we knew we wanted to see more mountains and wildlife. We visited a lot of different cities in our travels together, but nothing compared to the excitement of experiencing bears, bighorn sheep, coyote, and other wild animals in their natural habitat when visiting Yellowstone National Park. Not to mention the gorgeous backdrop. Glacier National Park was added to our bucket list shortly after that trip.</p>
 
 <p>When planning our wedding, we wanted it to be something that is representative of us and who we are as a couple. We love to travel and experience new places. We couldn't envision getting married in St. Louis when our best times together have been packing up and getting lost in new worlds. We would love to share this intimate experience with our closest family and friends.  We are so very appreciative of anyone who can make the journey to spend our wedding day with us.</p>
 
-<h4>To Have an Intimate Wedding</h4>
+<h3>To Have an Intimate Wedding</h3>
 <p>We want to be surrounded by those who truly know us. Having a destination wedding allows us to spend more quality time with each of our guests and have a more intimate experience.</p>
 
-<h4>To Have More Than Just a Wedding</h4>
+<h3>To Have More Than Just a Wedding</h3>
 <p>We view this as a time for our family and friends to come together and have an unforgettable experience. Not just a wedding, but a chance to get to know each other and have a great time, for more than just one night. With a destination wedding, we have the ability to plan multiple events surrounding the wedding. We look forward to a fun-filled weekend in the mountains with our friends and families.</p>
 
-<h4>To Have a Good Time</h4>
+<h3>To Have a Good Time</h3>
 <p>Photographing multiple weddings together has given us a unique behind-the-scenes perspective of weddings. Between the stress of  coordinating vendors, guests, and bridal parties - it seemed easy to lose sight of the reason for the wedding.</p>
 
 <p>We want our wedding to be enjoyable to our guests and to us. Leaving the planning to the resort allows us to focus on why we're there: to make a lifelong commitment to one another and celebrate this time in our lives.</p>
@@ -169,81 +168,63 @@
 
 
     <!-- Accomodations Section -->
-<section id="accomodations" class="content-section download-section">
-<div class="container">
-<div class="row">
-<div class="col-md-12 text-center">
+    <section id="accommodations" class="content-section text-center">
+        <div class="download-section">
+            <div class="container">
+                <div class="col-lg-8 col-lg-offset-2">
     <h1>Accomodations</h1>
+    <h3>Whitefish Mountain Resort</h3>
+    <p><b>Address:</b> 1015 Glades Dr, Whitefish, MT 59937, USA | <b>Phone:</b> 800-858-4152</p>
+    <p>Resort accommodations are available in all sizes and types from luxurious townhomes and private residences to cozy cabins and condominiums. Any of the Vacation Planners can assist you, whether you’ve decided on a specific property or building, or would like for them to discuss some options with you.  Mention your promo code, which is BrandonWexler to receive 15% off OR you may also book on-line by visiting skiwhitefish.com, and entering this same promo code.  The promo code cannot be used online until August 30th, 2018.
+      <br><br>Please book your accommodations in the main village area, which includes the Morning Eagle Lodge and the Kintla Lodge.
+
+      <h3>Other Loding Options</h3>
+      <p>Best Western Rocky Mountain Lodge | Hampton Inn & Suites Whitefish | Pine Lodge | Airbnb
+      <br><br><i>*Please note, you may need a rental car for ceremony and reception by choosing other accommodations.</i>
+
+      <h3>Travel and Transportation</h3>
+        <h4>Area Shuttle Service</h4>
+          <h5>Glacier Park Express</h5>
+            <p>Service between Whitefish Mountain Resort, the town of Whitefish, and Glacier National Park. Trips between Whitefish and Whitefish Mountain Resort are free. Trips to Glacier Park are $10 per person or $5 for kids
+          <h5>Whitefish Mountain Resort Village Shuttle</h5>
+            <p>Complimentary to Whitefish Mountain Resort Lodging guests to various locations around the resort. This shuttle does not go into the town of Whitefish.</p>
+        <h4>Rental Car Companies</h4>
+          <p>DOLLAR (406) 892-0009 | AVIS (406) 257-2727 | ENTERPRISE (406) 755-4848
+            <br>HERTZ (406) 863-1210 | BUDGET (406) 755-7500 | THRIFTY (406) 257-7333
+        <h4>Taxi Service</h4>
+          <p>GLACIER TAXI <i>(serving the Whitefish area)</i> (406) 250-3603 | ARROW SHUTTLE <i>(resort, airport shuttle, and taxi service)</i> (406) 300-2301
+
 </div>
+</div>  <!-- end of row -->
 </div>
-<div class="row">
-<div class="col-sm-4">
+</section>
+
+<!-- Accomodations Section -->
+    <section id="accommodations" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2" style="color: black">
+<h1>Accomodations</h1>
 <h3>Whitefish Mountain Resort</h3>
-<p-small><b>Address:</b> 1015 Glades Dr, Whitefish, MT 59937, USA
-<br><b>Phone:</b> 800-858-4152
-<br>Resort accommodations are available in all sizes and types from luxurious townhomes and private residences to cozy cabins and condominiums.
+<p><b>Address:</b> 1015 Glades Dr, Whitefish, MT 59937, USA | <b>Phone:</b> 800-858-4152</p>
+<p>Resort accommodations are available in all sizes and types from luxurious townhomes and private residences to cozy cabins and condominiums. Any of the Vacation Planners can assist you, whether you’ve decided on a specific property or building, or would like for them to discuss some options with you.  Mention your promo code, which is BrandonWexler to receive 15% off OR you may also book on-line by visiting skiwhitefish.com, and entering this same promo code.  The promo code cannot be used online until August 30th, 2018.
+  <br><br>Please book your accommodations in the main village area, which includes the Morning Eagle Lodge and the Kintla Lodge.
 
-<p-small>Call 1-800-858-4152.  Any of the Vacation Planners can assist you, whether you’ve decided on a specific property or building, or would like for them to discuss some options with you.  Mention your promo code, which is BrandonWexler to receive 15% off OR you may also book on-line by visiting skiwhitefish.com, and entering this same promo code.  The promo code cannot be used online until August 30th, 2018.
-</p-small>
-<p-small>Please book your accommodations in the main village area, which includes the Morning Eagle Lodge and the Kintla Lodge.
-<br><br>
-Morning Eagle Lodge offers studio, 1-, 2- and 3-bedroom condos available. Each condo is equipped with a kitchen, granite countertops, upscale living spaces, one bathroom for every bedroom and private balconies. Amenities include gas fireplaces in 1-, 2- and 3-bedroom units, underground parking, mountain and valley views, an elevator, fitness facility, free WiFi access, rooftop hot tub and a shared gas grill.
-<br><br>
-Kintla Lodge offers 1-, 2- and 3-bedroom condos and hotel-style rooms with a queen bed. Condos feature spacious upscale living rooms, a kitchen, one bathroom for every bedroom and private decks. Amenities include gas fireplaces in 1-, 2- and 3-bedroom condos, underground parking, elevators, free WiFi access, a shared slopeside hot tub and mountain and valley views.
-</p-small>
-</font>
-</div>
+  <h3>Other Loding Options</h3>
+  <p>Best Western Rocky Mountain Lodge | Hampton Inn & Suites Whitefish | Pine Lodge | Airbnb
+  <br><br><i>*Please note, you may need a rental car for ceremony and reception by choosing other accommodations.</i>
 
-<div class="col-sm-4">
-<h3>Other Lodging Options</h3>
-<p-small><font face="Raleway"><b>BEST WESTERN ROCKY MOUNTAIN LODGE</b></font>
-Address: 6510 Highway 93 S, Whitefish, MT 59937
-Phone: (406) 862-2569
-Straightforward property with free WiFi, breakfast & an area shuttle, plus an outdoor pool.</p-small>
-<br><br><br>
-<font face="Raleway"><b>HAMPTON INN & SUITES WHITEFISH</b></font>
-<p-small>
-Address: 6340 US-93, Whitefish, MT 59937
-Phone: (406) 730-8901
-Relaxed hotel featuring complimentary breakfast, plus a fitness room & indoor pool.</p-small>
-<br><br><br>
-<font face="Raleway"><b>PINE LODGE</b></font>
-<p-small>
-Address: 920 Spokane Ave, Whitefish, MT 59937
-Phone: (406) 862-760
-Rustic-accented rooms & suites, plus indoor & outdoor pools, free breakfast & shuttle service</p-small>
-<br><br><br>
-<font face="Raleway"><b>AIRBNB</b></font>
-<p-small>
-https://www.airbnb.com/</p-small>
-<br><br>
-<i>*Please note, you may need a rental car for ceremony and reception by choosing other accommodations.</i>
-</div>
+    <h3>Area Shuttle Service</h3>
+        <p>GLACIER PARK EXPRESS
+          <br>Service between Whitefish Mountain Resort, the town of Whitefish, and Glacier National Park. Trips between Whitefish and Whitefish Mountain Resort are free. Trips to Glacier Park are $10 per person or $5 for kids</p>
+      <p>WHITEFISH MOUNTAIN RESORT VILLAGE SHUTTLE
+        <br>
+        Complimentary to Whitefish Mountain Resort Lodging guests to various locations around the resort. This shuttle does not go into the town of Whitefish.</p>
+    <p>RENTAL CAR COMPANIES
+      <br>Dollar (406) 892-0009 | Avis (406) 257-2727 | Enterprise (406) 755-4848
+        <br>Hertz (406) 863-1210 | Budget (406) 755-7500 | Thrifty (406) 257-7333
+    <p>TAXI SERVICE
+      <br>Glacier Taxt<i>(serving the Whitefish area)</i> (406) 250-3603 | Arrow Shuttle <i>(resort, airport shuttle, and taxi service)</i> (406) 300-2301</p>
 
-<div class="col-sm-4">
-<h3>Travel and Transportation</h3>
-<font face="Raleway"><b>AREA SHUTTLE SERVICE</b></font><br>
-<p-small>
-Glacier Park Express– Service between Whitefish Mountain Resort, town of Whitefish, and Glacier Park
-Trips between Whitefish and Whitefish Mountain Resort are FREE.
-Trips to Glacier Park are $10 per person, $5 for kids
-Whitefish Mountain Resort Village Shuttle: Complimentary to Whitefish Mountain Resort Lodging guests, to various
-locations around the resort. This shuttle does not go down to Whitefish.
-</p-small><br><br>
-<font face="Raleway"><b>RENTAL CAR COMPANIES</b></font><br>
-<p-small>
-Dollar (406) 892-0009 Avis (406) 257-2727 Enterprise (406) 755-4848
-Hertz (406) 863-1210 Budget (406) 755-7500 Thrifty (406) 257-7333
-</p-small><br><br>
-<font face="Raleway"><b>TAXI SERVICE</b></font><br>
-<p-small>
-Glacier Taxi – serving the Whitefish area: (406) 250-3603
-Arrow Shuttle - Offering Resort, Airport Shuttle, and Taxi Service. (406) 300-2301
-</p-small><br><br>
-<font face="Raleway"><b>ROAD CONDITIONS</b></font><br>
-<p-small>
-State of Montana 1-800-226-7623 or Dial 511
-</p-small>
 </div>
 </div>  <!-- end of row -->
 </div>
