--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
@@ -124,19 +124,46 @@
     <section id="weddingdetails" class="content-section text-center">
         <div class="download-section">
             <div class="container">
-                <div class="col-lg-8 col-lg-offset-2">
+
+              <div class="row">
+                <div class="col-md-12">
                     <h2>Wedding Details</h2>
-                    <h3>Date and Time</h3>
-                    <p>Friday, August 30, 2019.
-                    <br>5:30 PM Mountain Time</p>
-                    <h3>Ceremony and Reception</h3>
-                    <p>Whitefish Mountain Resort
-                    <br>1015 Glades Dr, Whitefish, MT 59937, USA</p>
-                    <p>Ceremony and Reception will both take place at Whitefish Mountain Resort, where a room block and 15% off promo code have been provided under "accommodations" tab.</p>
-                    <p>Guests arrive by chairlift or enclosed gondola to the ceremony at the summit. Reception to follow at Base Lodge.</p>
                 </div>
+              </div>
+
+              <div class="row">
+                <div class="col-md-4">
+                    <h3>Date and Time</h3>
+                    <p>Friday, August 30, 2019
+                    <br>5:30 PM Mountain Time</p>
+                    <h3>Location</h3>
+                    <p><b>WHITEFISH MOUNTAIN RESORT</b>
+                    <br>1015 Glades Dr, Whitefish, MT 59937, USA
+                    <br><br>The ceremony and reception will both take place at Whitefish Mountain Resort, where a room block and 15% off promo code have been provided (see more under <i>lodging</i>).
+                    <br<br>Guests will arrive by chairlift or enclosed gondola to the ceremony at the summit. The reception to follow at Base Lodge.</p>
+                </div>
+
+                <div class="col-md-4">
+                  <h3>Lodging</h3>
+                  <b>WHITEFISH MOUNTAIN RESORT</b>
+                  <br>1015 Glades Dr, Whitefish, MT 59937, USA
+                  <br>800-858-4152
+                  <br><br>Resort accommodations are available in all sizes and types from luxurious townhomes and private residences to cozy cabins and condominiums. Any of the vacation planners can assist you, whether you’ve decided on a specific property or building or would like for them to discuss some options with you.  Mention the promo code <i>BrandonWexler</i> to receive 15% off or you may  book on-line by visiting skiwhitefish.com and entering the same promo code.
+                    <br><br>Please book your accommodations in the main village area, which includes the Morning Eagle Lodge and the Kintla Lodges.
+
+</div>
+<div class="col-md-4">
+                    <h3>Transportation</h3>
+                      <p><b>GLACIER PARK EXPRESS</b><br>
+                        Glacier Park Express provides service between Whitefish Mountain Resort, the town of Whitefish, and Glacier National Park. Trips between Whitefish and Whitefish Mountain Resort are free. Trips to Glacier Park are $10 per person or $5 for kids
+                      <br><br><b>WHITEFISH MOUNTAIN RESORT VILLAGE SHUTTLE</b><br>
+                        Complimentary to Whitefish Mountain Resort Lodging guests to various locations around the resort. This shuttle does not go into the town of Whitefish.</p>
+                </div>
+
             </div>
+
         </div>
+      </div>
     </section>
 
 <!-- Why a Destination Wedding -->
@@ -167,33 +194,12 @@
     </section>
 
 
-    <!-- Accomodations Section -->
+    <!-- RSVP Section -->
     <section id="accommodations" class="content-section text-center">
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-    <h1>Accomodations</h1>
-    <h3>Whitefish Mountain Resort</h3>
-    <p><b>Address:</b> 1015 Glades Dr, Whitefish, MT 59937, USA | <b>Phone:</b> 800-858-4152</p>
-    <p>Resort accommodations are available in all sizes and types from luxurious townhomes and private residences to cozy cabins and condominiums. Any of the Vacation Planners can assist you, whether you’ve decided on a specific property or building, or would like for them to discuss some options with you.  Mention your promo code, which is BrandonWexler to receive 15% off OR you may also book on-line by visiting skiwhitefish.com, and entering this same promo code.  The promo code cannot be used online until August 30th, 2018.
-      <br><br>Please book your accommodations in the main village area, which includes the Morning Eagle Lodge and the Kintla Lodge.
-
-      <h3>Other Loding Options</h3>
-      <p>Best Western Rocky Mountain Lodge | Hampton Inn & Suites Whitefish | Pine Lodge | Airbnb
-      <br><br><i>*Please note, you may need a rental car for ceremony and reception by choosing other accommodations.</i>
-
-      <h3>Travel and Transportation</h3>
-        <h4>Area Shuttle Service</h4>
-          <h5>Glacier Park Express</h5>
-            <p>Service between Whitefish Mountain Resort, the town of Whitefish, and Glacier National Park. Trips between Whitefish and Whitefish Mountain Resort are free. Trips to Glacier Park are $10 per person or $5 for kids
-          <h5>Whitefish Mountain Resort Village Shuttle</h5>
-            <p>Complimentary to Whitefish Mountain Resort Lodging guests to various locations around the resort. This shuttle does not go into the town of Whitefish.</p>
-        <h4>Rental Car Companies</h4>
-          <p>DOLLAR (406) 892-0009 | AVIS (406) 257-2727 | ENTERPRISE (406) 755-4848
-            <br>HERTZ (406) 863-1210 | BUDGET (406) 755-7500 | THRIFTY (406) 257-7333
-        <h4>Taxi Service</h4>
-          <p>GLACIER TAXI <i>(serving the Whitefish area)</i> (406) 250-3603 | ARROW SHUTTLE <i>(resort, airport shuttle, and taxi service)</i> (406) 300-2301
-
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc0qs3sWWCcOk6Ua0rVTH_vqKP_gIy6RLUTSXV7Xh3KD3FYVw/viewform?embedded=true" width="300" height="200" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 </div>
 </div>  <!-- end of row -->
 </div>
