--- a/index.html
+++ b/index.html
@@ -236,14 +236,10 @@
 </div>
 </section>
 
-
-    <!-- Map Section -->
-    <div id="map"></div>
-
     <!-- Footer -->
     <footer>
-        <div class="container text-center">
-            <p>Copyright &copy; Your Website 2016</p>
+        <div class="container text-center" style="color: black">
+            <p>Copyright &copy; Brandon Wexler</p>
         </div>
     </footer>
 
