--- a/index.html
+++ b/index.html
@@ -199,7 +199,12 @@
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc0qs3sWWCcOk6Ua0rVTH_vqKP_gIy6RLUTSXV7Xh3KD3FYVw/viewform?embedded=true" width="300" height="200" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+                  <form action="https://formspree.io/your@email.com"
+                      method="POST">
+                    <input type="text" name="name">
+                    <input type="email" name="_replyto">
+                    <input type="submit" value="Send">
+                </form>
 </div>
 </div>  <!-- end of row -->
 </div>
