--- a/index.html
+++ b/index.html
@@ -199,12 +199,11 @@
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                  <form action="https://formspree.io/your@email.com"
-                      method="POST">
-                    <input type="text" name="name">
-                    <input type="email" name="_replyto">
-                    <input type="submit" value="Send">
-                </form>
+                  <form method="POST" action="https://formspree.io/allisonebrandon@gmail.com">
+  <input type="email" name="email" placeholder="Your email">
+  <textarea name="message" placeholder="Your message"></textarea>
+  <button type="submit">Send</button>
+</form>
 </div>
 </div>  <!-- end of row -->
 </div>
