--- a/index.html
+++ b/index.html
@@ -196,9 +196,8 @@
 
     <!-- RSVP Section -->
     <section id="accommodations" class="content-section text-center">
-        <div class="download-section">
-            <div class="container">
-                <div class="col-lg-8 col-lg-offset-2">
+      <div class="row">
+          <div class="col-lg-8 col-lg-offset-2">
                   <form method="POST" action="https://formspree.io/allisonebrandon@gmail.com">
   <input type="email" name="email" placeholder="Your email">
   <textarea name="message" placeholder="Your message"></textarea>
@@ -206,7 +205,6 @@
 </form>
 </div>
 </div>  <!-- end of row -->
-</div>
 </section>
 
 <!-- Accomodations Section -->
