--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
     <section id="accommodations" class="content-section text-center">
       <div class="row">
           <div class="col-lg-8 col-lg-offset-2">
-<form method="POST" action="https://formspree.io/allisonebrandon@gmail.com">
-  <input type="email" name="email" placeholder="Your email address">
-  <br><textarea name="message" placeholder="Your message"></textarea>
+                  <form method="POST" action="https://formspree.io/allisonebrandon@gmail.com">
+  <input type="email" name="email" placeholder="Your email">
+  <textarea name="message" placeholder="Your message"></textarea>
   <button type="submit">Send</button>
 </form>
 </div>
