--- a/index.html
+++ b/index.html
@@ -196,8 +196,11 @@
 
     <!-- RSVP Section -->
     <section id="accommodations" class="content-section text-center">
-      <div class="row">
-          <div class="col-lg-8 col-lg-offset-2">
+      <div class="download-section">
+          <div class="container">
+
+            <div class="row">
+              <div class="col-md-12">
                   <form method="POST" action="https://formspree.io/allisonebrandon@gmail.com">
   <input type="email" name="email" placeholder="Your email">
   <textarea name="message" placeholder="Your message"></textarea>
@@ -205,6 +208,8 @@
 </form>
 </div>
 </div>  <!-- end of row -->
+</div> 
+</div>
 </section>
 
 <!-- Accomodations Section -->
