--- a/index.html
+++ b/index.html
@@ -197,12 +197,12 @@
     <!-- RSVP Section -->
     <section id="accommodations" class="content-section text-center">
       <div class="download-section">
-          <div class="container"> 
+          <div class="container">
             <div class="row">
               <div class="col-md-12">
                   <form method="POST" action="https://formspree.io/allisonebrandon@gmail.com">
   <input type="email" name="email" placeholder="Your email">
-  <textarea name="message" placeholder="Your message"></textarea>
+  <br><textarea name="message" placeholder="Your message"></textarea>
   <button type="submit">Send</button>
 </form>
 </div>
