--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                   <form method="POST" action="https://formspree.io/allisonebrandon@gmail.com">
   <input type="email" name="email" placeholder="Your email">
   <br><textarea name="message" placeholder="Your message"></textarea>
-  <button type="submit">Send</button>
+  <br><button type="submit">Send</button>
 </form>
 </div>
 </div>  <!-- end of row -->
