--- a/index.html
+++ b/index.html
@@ -200,9 +200,11 @@
           <div class="container">
             <div class="row">
               <div class="col-md-12">
+                <h2>RSVP</h2>
                   <form method="POST" action="https://formspree.io/allisonebrandon@gmail.com">
   <input type="email" name="email" placeholder="Your email">
-  <br><textarea name="message" placeholder="Your message"></textarea>
+  <input type="number" name="number" placeholder="Total number of guests">
+  <br><textarea name="message" placeholder="Name of each guest"></textarea>
   <br><button type="submit">Send</button>
 </form>
 </div>
