--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
                 <h2>RSVP</h2>
                   <form method="POST" action="https://formspree.io/allisonebrandon@gmail.com">
   <input type="email" name="email" placeholder="Your email">
-  <input type="number" name="number" placeholder="Total number of guests">
-  <br><textarea name="message" placeholder="Name of each guest"></textarea>
+  <input type="number" min="1" max="5" name="number" placeholder="Total number of guests">
+  <br><textarea name="message" placeholder="Name of each guest (including you!)"></textarea>
   <br><button type="submit">Send</button>
 </form>
 </div>
