--- a/index.html
+++ b/index.html
@@ -2,7 +2,15 @@
 <html lang="en">
 
 <head>
-
+<style>
+.button {
+  background-color: #7ec5b7;
+  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  padding-left: 10px;
+  padding-right: 10px;
+  border: 0;
+}
+</style>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -201,11 +209,11 @@
             <div class="row">
               <div class="col-md-12">
                 <h2>RSVP</h2>
+                
                   <form method="POST" action="https://formspree.io/allisonebrandon@gmail.com">
-  <input type="email" name="email" placeholder="Your email">
-  <input type="number" min="1" max="5" name="number" placeholder="Total number of guests">
-  <br><textarea name="message" placeholder="Name of each guest (including you!)"></textarea>
-  <br><button type="submit">Send</button>
+  <p>Your email address: <input type="email" name="email" style="color: black">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Total number of guests: <input type="number" min="1" max="5" name="number" style="color: black">
+  <br><br>Name of each guest (including you!): <br><textarea name="message" style="color: black;width: 240px"></textarea>
+  <br><br><button type="submit" class="button">SEND</button>
 </form>
 </div>
 </div>  <!-- end of row -->
