--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
                         <a class="page-scroll" href="#destinationwedding">Why a Destination Wedding</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#photos">Photos</a>
+                        <a class="page-scroll" href="#RSVP">RSVP</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#rsvp">RSVP</a>
+                        <a class="page-scroll" href="#Accomodations">Accomodations</a>
                     </li>
                 </ul>
             </div>
@@ -204,12 +204,13 @@
 
     <!-- RSVP Section -->
     <section id="accommodations" class="content-section text-center">
-      <div class="download-section">
+      <div class="rsvp-section">
           <div class="container">
             <div class="row">
               <div class="col-md-12">
                 <h2>RSVP</h2>
-                
+                Use the below form to send an email to Allison and Brandon and RSVP for the wedding.
+                <br><br>
                   <form method="POST" action="https://formspree.io/allisonebrandon@gmail.com">
   <p>Your email address: <input type="email" name="email" style="color: black">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Total number of guests: <input type="number" min="1" max="5" name="number" style="color: black">
   <br><br>Name of each guest (including you!): <br><textarea name="message" style="color: black;width: 240px"></textarea>
